Terraform/lambda_sg.tf
#lambda sg
resource "aws_security_group" "lambda_sg" {
  name        = "${var.project}-lambda-sg"
  description = "Lambda SG"
  vpc_id      = aws_vpc.main.id

  # No inbound for Lambda

  # Outbound open 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
